[project]
name = "policy-pass-be"
version = "0.1.0"
description = "Policy Pass — FastAPI + LangChain RAG Backend"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "httpx>=0.27"]
rag = [
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "faiss-cpu>=1.8",
    "pymongo>=4.8",
    "boto3>=1.35",
    "openai>=1.0",
]
rerank = ["sentence-transformers>=3.0"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*", "config*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
